fix: giant hand on mobile
On mobile/tablet, the Magic Hand would get about 400 pixels wide. This sets it at 80px

--- a/src/css/_03-generic.scss
+++ b/src/css/_03-generic.scss
@@ -465,7 +465,8 @@ fieldset {
 }
 
 .c4aa-magic-hand {
-	color: var( --color-brandRed );;
+	color: var( --color-brandRed );
+	max-width: 80px;
 }
 
 /* Footer Widgets */
